--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "vAmigaWeb",
   "short_name": "vAmigaWeb",
-  "start_url": "/",
+  "start_url": "/v108/",
   "scope": ".",
   "display": "standalone",
   "background_color": "#BBBBBB",
